Add PUT endpoint to modify room details
